Ensure textbox on textboxlist doesn't overflow parent container when long text is entered.

--- a/textboxlist.less
+++ b/textboxlist.less
@@ -17,6 +17,8 @@
 .textboxlist-textField {
 	height: 22px !important;
 	line-height: 22px !important;
+	// This ensure textbox doesn't overflow container
+	max-width: 100%;
 	float: left;
 
 	/* reset */
